--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "flask-socketio>=5.5.1",
     "python-socketio>=5.13.0",
     "python-engineio>=4.12.1",
+    "openpyxl>=3.1.5",
 ]
 
 [project.scripts]
